--- a/SampleCommonTool.ConApp/SampleCommonTool.ConApp.csproj
+++ b/SampleCommonTool.ConApp/SampleCommonTool.ConApp.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\CommonTool\CommonTool.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CommonTool.Console" Version="1.0.0" />
+  </ItemGroup>
 
 </Project>
