--- a/SampleCommonTool.ConApp/SampleCommonTool.ConApp.csproj
+++ b/SampleCommonTool.ConApp/SampleCommonTool.ConApp.csproj
@@ -5,10 +5,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>91b97d7d-713c-45de-8707-12d819b59666</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommonTool.Console" Version="1.0.0" />
+    <PackageReference Include="CommonTool.Console" Version="1.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
