--- a/CommonTool/CommonTool.csproj
+++ b/CommonTool/CommonTool.csproj
@@ -13,6 +13,12 @@
 		<PackageTags>Console application</PackageTags>
 		<RepositoryUrl>https://github.com/leoggehrer/CommonTool</RepositoryUrl>
 		<IncludeSymbols>True</IncludeSymbols>
+		<PackageReadmeFile>ReadMe.md</PackageReadmeFile>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\ReadMe.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 
 </Project>
